--- a/package.json
+++ b/package.json
@@ -22,7 +22,6 @@
     "body-parser": "^1.19.0",
     "cors": "^2.8.5",
     "express": "^4.17.1",
-    "express-session": "^1.17.0",
     "sequelize": "^5.21.3",
     "sqlite": "^3.0.3"
   },
@@ -33,6 +32,8 @@
     "eslint-plugin-jsx-a11y": "^6.2.3",
     "eslint-plugin-react": "^7.17.0",
     "eslint-plugin-react-hooks": "^1.7.0",
-    "nodemon": "^2.0.2"
+    "nodemon": "^2.0.2",
+    "joi": "^14.3.1",
+    "jsonwebtoken": "^8.5.1"
   }
 }
