--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "React TODO App",
   "main": "index.js",
   "scripts": {
+    "dev:client": "webpack-dev-server",
     "dev:server": "nodemon ./server/app.js --exec 'npm run lint && node'",
     "lint": "eslint ./server/**/*.js",
     "test": "echo \"Error: no test specified\" && exit 1"
@@ -19,21 +20,35 @@
   },
   "homepage": "https://github.com/jatd/notanothertodo#readme",
   "dependencies": {
+    "@types/react-router-dom": "^5.1.3",
     "body-parser": "^1.19.0",
     "cors": "^2.8.5",
     "express": "^4.17.1",
+    "react": "^16.12.0",
+    "react-dom": "^16.12.0",
+    "react-router-dom": "^5.1.2",
     "sequelize": "^5.21.3",
     "sqlite": "^3.0.3"
   },
   "devDependencies": {
+    "@types/node": "^13.1.4",
+    "@types/react": "^16.9.17",
+    "@types/react-dom": "^16.9.4",
     "eslint": "^6.8.0",
     "eslint-config-airbnb": "^18.0.1",
     "eslint-plugin-import": "^2.19.1",
     "eslint-plugin-jsx-a11y": "^6.2.3",
     "eslint-plugin-react": "^7.17.0",
     "eslint-plugin-react-hooks": "^1.7.0",
-    "nodemon": "^2.0.2",
+    "html-loader": "^0.5.5",
+    "html-webpack-plugin": "^3.2.0",
     "joi": "^14.3.1",
-    "jsonwebtoken": "^8.5.1"
+    "jsonwebtoken": "^8.5.1",
+    "nodemon": "^2.0.2",
+    "ts-loader": "^6.2.1",
+    "typescript": "^3.7.4",
+    "webpack": "^4.41.5",
+    "webpack-cli": "^3.3.10",
+    "webpack-dev-server": "^3.10.1"
   }
 }
