--- a/package.json
+++ b/package.json
@@ -2,10 +2,11 @@
   "name": "notanothertodo",
   "version": "1.0.0",
   "description": "React TODO App",
-  "main": "index.js",
+  "main": "dist/bundle.js",
   "scripts": {
-    "dev:client": "webpack-dev-server",
+    "dev:client": "webpack-dev-server --config ./webpack.config.js --mode development",
     "dev:server": "nodemon ./server/app.js --exec 'npm run lint && node'",
+    "server": "ts-node-dev --respawn --transpileOnly ./server/app.ts",
     "lint": "eslint ./server/**/*.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
@@ -20,35 +21,49 @@
   },
   "homepage": "https://github.com/jatd/notanothertodo#readme",
   "dependencies": {
-    "@types/react-router-dom": "^5.1.3",
+    "antd": "^3.26.6",
+    "axios": "^0.19.1",
     "body-parser": "^1.19.0",
     "cors": "^2.8.5",
     "express": "^4.17.1",
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
     "react-router-dom": "^5.1.2",
-    "sequelize": "^5.21.3",
-    "sqlite": "^3.0.3"
+    "reflect-metadata": "^0.1.13",
+    "sqlite": "^3.0.3",
+    "typeorm": "^0.2.22"
   },
   "devDependencies": {
+    "@types/express": "^4.17.2",
     "@types/node": "^13.1.4",
     "@types/react": "^16.9.17",
     "@types/react-dom": "^16.9.4",
+    "@types/react-router-dom": "^5.1.3",
+    "@types/yup": "^0.26.27",
+    "css-loader": "^2.1.0",
     "eslint": "^6.8.0",
     "eslint-config-airbnb": "^18.0.1",
     "eslint-plugin-import": "^2.19.1",
     "eslint-plugin-jsx-a11y": "^6.2.3",
     "eslint-plugin-react": "^7.17.0",
     "eslint-plugin-react-hooks": "^1.7.0",
+    "formik": "^2.1.1",
     "html-loader": "^0.5.5",
     "html-webpack-plugin": "^3.2.0",
     "joi": "^14.3.1",
     "jsonwebtoken": "^8.5.1",
+    "node-sass": "^4.13.0",
     "nodemon": "^2.0.2",
+    "sass-loader": "^6.0.7",
+    "style-loader": "^1.1.2",
     "ts-loader": "^6.2.1",
+    "ts-node": "^8.5.4",
+    "ts-node-dev": "^1.0.0-pre.44",
     "typescript": "^3.7.4",
+    "typescript-plugin-css-modules": "^2.1.2",
     "webpack": "^4.41.5",
     "webpack-cli": "^3.3.10",
-    "webpack-dev-server": "^3.10.1"
+    "webpack-dev-server": "^3.10.1",
+    "yup": "^0.28.0"
   }
 }
