--- a/tsconfig.json
+++ b/tsconfig.json
@@ -11,7 +11,7 @@
     "removeComments": true,
     "strict": true,
     "noImplicitAny": true,
-    "strictNullChecks": true,
+    "strictNullChecks": false,
     "strictFunctionTypes": true,
     "strictPropertyInitialization": false,
     "noImplicitThis": true,
@@ -19,8 +19,8 @@
     "noUnusedParameters": true,
     "noImplicitReturns": true,
     "noFallthroughCasesInSwitch": true,
-    "esModuleInterop": true,
-    "allowSyntheticDefaultImports": false,
+    "esModuleInterop": false,
+    "allowSyntheticDefaultImports": true,
     "skipLibCheck": false,
     "emitDecoratorMetadata": true,
     "experimentalDecorators": true,
